--- a/2019-03-20.Rmd
+++ b/2019-03-20.Rmd
@@ -1,11 +1,30 @@
 ---
 title: '2019-03-20'
-author: ""
+author: "Tony"
 date: "3/20/2019"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+```
+
+```{r}
+dialogue <- c('小明說:"明天不用上課。"',
+              '小花說:"真的嗎?"'）
+              
+```
+```{r}
+dialogue <- c("'曉明說明天不用上課'",
+              "'小花說:真的嗎?'")
+
+cat(dialogue, sep="\n")
+```
+            
+                  
+
+```{r}
+aLogical <- c(T,TRUE,F,FALSE,FALSE)
+class(aLogical)
 ```
 
