--- a/2019-03-20.Rmd
+++ b/2019-03-20.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 dialogue <- c('小明說:"明天不用上課。"',
               '小花說:"真的嗎?"'）
-              
+ cat(dialogue, sep="\n"             
 ```
 ```{r}
 dialogue <- c("'曉明說明天不用上課'",
@@ -27,4 +27,68 @@ cat(dialogue, sep="\n")
 aLogical <- c(T,TRUE,F,FALSE,FALSE)
 class(aLogical)
 ```
+```{r}
+sum(aLogical)
+```
+
+```{r}
+studentMajors <- factor(
+  c("經濟系", "經濟系", "法律系")
+)
+```
+```{r}
+typeof(studentMajors)
+```
+```{r}
+levels(studentMajors)
+```
+
+
+```{r}
+studentMajors <- factor(
+  c("經濟系","統計系","法律系")
+)
+```
+```{r}
+typeof(studentMajors)
+```
+```{r}
+birthplace <- factor(
+  c("台北", "台北", "台中","台中","台中")
+)
+levels(birthplace)
+as.integer(birthplace)
+```
+```{r}
+levels(birthplace)
+```
+```{r}
+stringInteger <- c("1","2")
+class(stringInteger)
+```
+```{r}
+birthplace
+```
+```{r}
+trueInteger <- as.integer(stringInteger)
+class(trueInteger) # 可以進行數值運算
+```
+```{r}
+library(lubridate)
+```
+```{r}
+dtObject<-ymd_hms("1970-01-01 00:02:53") 
+```
+
+
+```{r}
+dtObjectVector<-ymd_hms(
+  c("1970-01-01 00:02:53",
+    "1980-02-11 11:25:22")
+)
+```
+```{r}
+class(dtObject)
+```
+
 
