--- a/2019-04-24.Rmd
+++ b/2019-04-24.Rmd
@@ -4,4 +4,35 @@ author: "Tony"
 date: "2019年4月24日"
 output: html_document
 ---
+#matrix
+```{r}
+Mat1 <- matrix(
+  c(1:8),4 ,2
+)
+Mat1
+```
+
+```{r}
+class(Mat1)
+typeof(Mat1)
+```
+
+```{r}
+Mat2 <- matrix(
+  c("a","b","c","d"), 2, 2
+)
+Mat2
+```
+
+```{r}
+class(Mat2)
+typeof(Mat2)
+```
+
+```{r}
+Mat2[[3]]
+Mat2[[4]]
+Mat2[1,]
+Mat2[c(TRUE,TRUE,FALSE,FALSE)]
+```
 
