--- a/2019-06-12.Rmd
+++ b/2019-06-12.Rmd
@@ -68,4 +68,15 @@ for(i in seq_along(gmailAddress)){
   
 }
 ```
+#作業四
+```{r}
+load(url("https://www.dropbox.com/s/qnz9paigf61yjus/commitHistory.Rda?raw=1"))
+```
+
+print 每個commit 的 author
+```{r}
+for(i in seq_along(commitHistory)){
+  print(commitHistory[[i]]$commit$author$name)
+}
+```
 
